# enigma-api

./: Cargo.toml  README.md  docker-compose.yml
migrations/2024-09-17-153015_init/: down.sql  up.sql
src/: commands.rs  lib.rs  main.rs  schema.rs
src/database/: db.rs
src/middleware/: authorization.rs
src/model/: attendance.rs  course.rs  mod.rs  pagination.rs  role.rs  user.rs  users_courses.rs  users_roles.rs
src/repository/: attendance_repository.rs  course_repository.rs  mod.rs  role_repository.rs  user_repository.rs
src/routes/: attendance_route.rs  authorization_route.rs  course_route.rs  course_routes.rs  mod.rs  user_route.rs  user_routes.rs  users.rs
tests/: course_test.rs  user.rs  user_test.rs
tests/common/: mod.rs
