[package]
name = "enigma-api"
default-run = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["diesel_postgres"] }
diesel = { version = "2.1.0", features = ["chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = "1.0"
serde_json="1.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
clap = "4.5.18"
tokio = "1"
rand = "0.8.5"

[dev-dependencies]
reqwest ={ version = "0.12.7", features = ["json", "blocking"] }
